--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,33 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "pandas (>=2.3.3,<3.0.0)",
+    "openpyxl (>=3.1.5,<4.0.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.lint.dependencies]
+flake8 = "^7.3.0"
+black = "^25.9.0"
+mypy = "^1.18.2"
+isort = "^6.1.0"
+
+[tool.black]
+line-length = 119
+exclude = '/(\.git)/'
+
+[tool.isort]
+line-length = 119
+multi_line_output = 1
+include_trailing_comma = true
+combine_as_imports = false
+force_single_line = true
+
+[tool.mypy]
+disallow_untyped_defs = true
+warn_return_any = true
+exclude = ['\.venv', 'test']
