--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,13 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "pandas (>=2.3.3,<3.0.0)",
-    "openpyxl (>=3.1.5,<4.0.0)"
+    "openpyxl (>=3.1.5,<4.0.0)",
+    "pytest (>=8.4.2,<9.0.0)"
 ]
 
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.group.lint.dependencies]
@@ -28,7 +29,7 @@ line-length = 119
 exclude = '/(\.git)/'
 
 [tool.isort]
-line-length = 119
+line_length = 119
 multi_line_output = 1
 include_trailing_comma = true
 combine_as_imports = false
