--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,41 +1,61 @@
 [project]
-name = "bank-operarions-app"
+name = "bank_operation_app"
 version = "0.1.0"
 description = ""
 authors = [
-    {name = "Aleksandr R.",email = "redalnik@gmail.com"}
+    {name = "Aleksandr",email = "redalnik@gmail.com"}
 ]
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "pandas (>=2.3.3,<3.0.0)",
-    "openpyxl (>=3.1.5,<4.0.0)",
-    "pytest (>=8.4.2,<9.0.0)"
+    "pytest (>=8.4.0,<9.0.0)",
+    "pytest-cov (>=6.1.1,<7.0.0)",
+    "python-dotenv (>=1.1.1,<2.0.0)",
+    "requests (>=2.32.4,<3.0.0)",
+    "pandas (>=2.3.0,<3.0.0)",
+    "openpyxl (>=3.1.5,<4.0.0)"
 ]
 
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.poetry.group.lint.dependencies]
-flake8 = "^7.3.0"
-black = "^25.9.0"
-mypy = "^1.18.2"
-isort = "^6.1.0"
+
 
 [tool.black]
 line-length = 119
-exclude = '/(\.git)/'
+exclude = '''
+/(
+    \.venv|
+    \.git|
+    \.mypy_cache|
+    \.pytest_cache|
+    build|
+    dist
+    venv
+)/
+'''
 
 [tool.isort]
 line_length = 119
-multi_line_output = 1
-include_trailing_comma = true
-combine_as_imports = false
-force_single_line = true
+multi_line_output = 3
 
 [tool.mypy]
-disallow_untyped_defs = true
 warn_return_any = true
-exclude = ['\.venv', 'test']
+disallow_untyped_defs = true
+no_implicit_optional = true
+exclude = 'venv'
+
+
+
+
+[tool.poetry.group.lint.dependencies]
+flake8 = "^7.2.0"
+black = "^25.1.0"
+isort = "^6.0.1"
+mypy = "^1.16.0"
+
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.4.0"
